--- a/settings.html
+++ b/settings.html
@@ -135,6 +135,11 @@
             <li>gpt-4-turbo</li>
             <li>gpt-4o</li>
             <li>gpt-4o mini</li>
+        <h2>自定义模型</h2>
+    <div class="custom-model-wrapper">
+        <input type="text" class="custom-model-input" placeholder="Enter your custom model name">
+        <button class="add-custom-model-button">添加模型</button>
+    </div>
         </ul>
         <h2>API Key</h2>
         <div class="password-wrapper">
