--- a/settings.html
+++ b/settings.html
@@ -340,9 +340,18 @@
         </ul>
         <h2>模型列表</h2>
         <ul>
-            <li>GLM-4</li>
+            <li>GLM-4-Plus</li>
+            <li>GLM-4-0520</li>
+            <li>GLM-4-Long</li>
+            <li>GLM-4-AlITools</li>
+            <li>GLM-4-AirX</li>
+            <li>GLM-4-flash</li>
+            <li>GLM-4V-flash</li>
+            <li>GLM-4V-PLus</li>
             <li>GLM-4V</li>
+            <li>GLM-4V-flash</li>
             <li>GLM-3-Turbo</li>
+            
         </ul>
         <h2>API Key</h2>
         <div class="password-wrapper">
