--- a/settings.html
+++ b/settings.html
@@ -343,14 +343,14 @@
             <li>GLM-4-Plus</li>
             <li>GLM-4-0520</li>
             <li>GLM-4-Long</li>
-            <li>GLM-4-AlITools</li>
+            <li>GLM-4-AllTools</li>
             <li>GLM-4-AirX</li>
             <li>GLM-4-flash</li>
             <li>GLM-4V-flash</li>
             <li>GLM-4V-PLus</li>
             <li>GLM-4V</li>
             <li>GLM-4V-flash</li>
-            <li>GLM-3-Turbo</li>
+           
             
         </ul>
         <h2>API Key</h2>
@@ -579,9 +579,14 @@
                 <option value="llama3-70b-8192-groq">llama3-70b-groq</option>
                 <option value="llama3-8b-8192-groq">llama3-8b-groq</option>
                 <option value="llama2-70b-4096-groq">llama2-70b-groq</option>
-                <option value="glm-4">glm-4</option>
+                <option value="glm-4-plus">glm-4-plus</option>
+                <option value="glm-4-0520">glm-4-0520</option>
+                <option value="glm-4-alltools">glm-4-alltools</option>
+                <option value="glm-4-airX">glm-4-airX</option>
+                <option value="glm-4-flash">glm-4-flash</option>
+                <option value="glm-4v-flash">glm-4v-flash</option>
+                <option value="glm-4v-plus">glm-4v-plus</option>
                 <option value="glm-4v">glm-4v</option>
-                <option value="glm-3-turbo">glm-3-turbo</option>
                 <option value="moonshot-v1-128k">moonshot-v1-128k</option>
                 <option value="moonshot-v1-8k">moonshot-v1-32k</option>
                 <option value="moonshot-v1-8k">moonshot-v1-8k</option>
