--- a/side_panel.html
+++ b/side_panel.html
@@ -96,9 +96,14 @@
                     <option value="gemini-1.5-flash-latest">gemini-1.5-flash-latest</option>
                     <option value="llama3-70b-8192-groq">llama3-70b-groq</option>
                     <option value="llama3-8b-8192-groq">llama3-8b-groq</option>
-                    <option value="glm-4">glm-4</option>
+                    <option value="glm-4-plus">glm-4-plus</option>
+                    <option value="glm-4-0520">glm-4-0520</option>
+                    <option value="glm-4-alltools">glm-4-alltools</option>
+                    <option value="glm-4-airX">glm-4-airX</option>
+                    <option value="glm-4-flash">glm-4-flash</option>
+                    <option value="glm-4v-flash">glm-4v-flash</option>
+                    <option value="glm-4v-plus">glm-4v-plus</option>
                     <option value="glm-4v">glm-4v</option>
-                    <option value="glm-3-turbo">glm-3-turbo</option>
                     <option value="moonshot-v1-128k">moonshot-v1-128k</option>
                     <option value="moonshot-v1-8k">moonshot-v1-32k</option>
                     <option value="moonshot-v1-8k">moonshot-v1-8k</option>
